test/many-resolve-errors.err.expect
test/many-resolve-errors.ktn:1:1: error: undefined word 'some_undefined_name'

test/many-resolve-errors.ktn:4:3: error: undefined word 'some_undefined_name'

test/many-resolve-errors.ktn:7:3: error: undefined word 'some_other_undefined_name'

test/many-resolve-errors.ktn:9:8: error: undefined word 'y'

test/many-resolve-errors.ktn:9:10: error: undefined word 'y'

test/many-resolve-errors.ktn:9:12: error: undefined word 'z'

test/many-resolve-errors.ktn:10:8: error: undefined word 'z'

test/many-resolve-errors.ktn:10:10: error: undefined word 'z'

test/many-resolve-errors.ktn:13:5: error: undefined word 'bad'

test/many-resolve-errors.ktn:13:10: error: undefined word 'hi'

test/many-resolve-errors.ktn:13:13: error: undefined word 'hello'

test/many-resolve-errors.ktn:14:9: error: undefined word 'bad'

test/many-resolve-errors.ktn:14:14: error: undefined word 'hi'

test/many-resolve-errors.ktn:14:17: error: undefined word 'hello'

test/many-resolve-errors.ktn:15:7: error: undefined word 'bad'

test/many-resolve-errors.ktn:15:11: error: undefined word 'hi'
